# Sakurazaka

./: .gitignore  ImageDownloader_ForOnePage.py  README.md  Sakurazaka_EmotionAnalysis_OnBlog.ipynb  face_crop.py  pyproject.toml
EmotionAnalysis/src/: EmotionDetection_FromText.py  custom_pipeline.py  test_sentiment_labels.py
FaceRecognition/: Sakurazaka_BlogImage_Downloader.py  data_augment.py  face_crop.py
