[tool.poetry]
name = "emotiondetection-fromtext"
version = "0.1.0"
description = ""
authors = ["Naoya_Nakagawa_Sivax <n-nakagawa_d1@sivax.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
janome = "^0.5.0"
pykakasi = "^2.3.0"
pillow = "^10.4.0"
transforms = "^0.2.1"
transformers = "^4.46.3"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
unidecode = "^1.3.8"
unidic-lite = "^1.0.8"
fugashi = "^1.4.0"
protobuf = "^5.29.0"
opencv-python = "^4.10.0.84"
numpy = "^1.23"  # 追加
mtcnn = "0.1.0"    # 明示的にバージョンを指定
tensorflow = "2.18.0"  # 明示的にバージョンを指定

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
