[tool.poetry]
name = "emotiondetection-fromtext"
version = "0.1.0"
description = ""
authors = ["Naoya_Nakagawa <nakagawa.naoya.xr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
janome = "^0.5.0"
pykakasi = "^2.3.0"
pillow = "^10.4.0"
transforms = "^0.2.1"
transformers = "^4.46.3"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
unidecode = "^1.3.8"
unidic-lite = "^1.0.8"
fugashi = "^1.4.0"
protobuf = "^5.29.0"
opencv-python = "^4.10.0.84"
numpy = "^1.23"
mtcnn = "0.1.0"
tensorflow-io-gcs-filesystem = "0.31.0"
ipykernel = "^6.29.5"


# ✅ CUDA 12.1 対応の torch/torchvision/torchaudio だけ source を指定
torch = { version = "2.2.0+cu121", source = "pytorch-cu121" }
torchvision = { version = "0.17.0+cu121", source = "pytorch-cu121" }
torchaudio = { version = "2.2.0+cu121", source = "pytorch-cu121" }
tensorflow = "2.18.0"
ultralytics = "^8.3.97"
yt-dlp = "^2025.3.26"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

# ✅ PyTorch 公式リポジトリ（CUDA 12.1）
[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"  # ← これに戻す